# DMS_RNN

./: LICENSE  pyproject.toml  train_rnn.ipynb
dms_rnn/: dms_model.py  task_design.py
